--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="background_green">#2aa515</color>
+    <color name="white">#ffffff</color>
+    <color name="background_line_gray">#bfbfbf</color>
+    <color name="tab_unselect">#c9c9c9</color>
 </resources>
