添加主页，个人信息页，医院简介页

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,65 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
-
-    <!-- <LinearLayout
-         android:id="@+id/layout_bottom"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:layout_alignParentBottom="true"
-         android:orientation="horizontal">
-
-         <TextView
-             android:id="@+id/bottom_layout_main"
-             android:layout_width="0dip"
-             android:layout_height="wrap_content"
-             android:layout_weight="1"
-             android:drawableTop="@drawable/ic_main"
-             android:gravity="center"
-             android:text="@string/bottom_layout_main" />
-
-         <TextView
-             android:id="@+id/bottom_layout_health"
-             android:layout_width="0dip"
-             android:layout_height="wrap_content"
-             android:layout_weight="1"
-             android:drawableTop="@drawable/ic_health"
-             android:gravity="center"
-             android:text="@string/bottom_layout_health" />
-
-         <TextView
-             android:id="@+id/bottom_layout_message"
-             android:layout_width="0dip"
-             android:layout_height="wrap_content"
-             android:layout_weight="1"
-             android:drawableTop="@drawable/ic_message"
-             android:gravity="center"
-             android:text="@string/bottom_layout_message" />
-
-         <TextView
-             android:id="@+id/bottom_layout_center"
-             android:layout_width="0dip"
-             android:layout_height="wrap_content"
-             android:layout_weight="1"
-             android:drawableTop="@drawable/ic_center"
-             android:gravity="center"
-             android:text="@string/bottom_layout_center" />
-     </LinearLayout>
-
-     <View
-         android:layout_width="match_parent"
-         android:layout_height="0.5dip"
-         android:layout_above="@id/layout_bottom"
-         android:background="@color/background_line_gray" />-->
-    <FrameLayout
-        android:id="@+id/fl_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
     <com.honliv.honlivhospital.view.BottomBar
         android:id="@+id/bottomBar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bottombar_height"
         android:layout_alignParentBottom="true" />
 
+    <FrameLayout
+        android:id="@+id/fl_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottomBar" />
 </RelativeLayout>
