--- a/app/src/main/res/layout/fragment_third_main.xml
+++ b/app/src/main/res/layout/fragment_third_main.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageview"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:src="@mipmap/picture_no" />
-</RelativeLayout>
+        android:text="hello,world3" />
+</LinearLayout>
