--- a/app/src/main/res/layout/layout_top.xml
+++ b/app/src/main/res/layout/layout_top.xml
@@ -12,8 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
-        android:src="@mipmap/ic_back"
-        android:visibility="gone" />
+        android:src="@mipmap/ic_back" />
 
     <TextView
         android:layout_width="wrap_content"
