--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#0F9A24</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="background_green">#2aa515</color>
     <color name="white">#ffffff</color>
     <color name="background_line_gray">#bfbfbf</color>
     <color name="tab_unselect">#c9c9c9</color>
+    <color name="background_pink">#DAC4D8</color>
+    <color name="background_gray">#bfbfbf</color>
+    <color name="black">#000000</color>
+    <color name="text_blue">#1E3FE6</color>
 </resources>
