--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,7 +51,7 @@
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="hosipital_detail_icon">
+    <style name="hosipital_bus_icon">
         <item name="android:layout_height">30dp</item>
         <item name="android:layout_width">30dp</item>
         <item name="android:layout_margin">5dp</item>
@@ -63,7 +63,7 @@
         <item name="android:layout_width">wrap_content</item>
     </style>
 
-    <style name="hosipital_detail_text">
+    <style name="hosipital_bus_text">
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_marginLeft">20dp</item>
@@ -71,7 +71,7 @@
         <item name="android:gravity">center_vertical</item>
     </style>
 
-    <style name="hosipital_detail_layout">
+    <style name="hosipital_layout_bus">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:background">@color/background_gray</item>
@@ -86,5 +86,64 @@
         <item name="android:layout_marginLeft">65dp</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:textColor">@color/text_blue</item>
+    </style>
+
+    <style name="Toolbar_TextAppearance_White">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="Toolbar_TextAppearance_Green">
+
+    </style>
+
+    <style name="text_black_title" parent="layout_wrap_wrap">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">25sp</item>
+    </style>
+
+    <style name="text_gray_content" parent="layout_wrap_wrap">
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="hosipital_layout_map">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="hosipital_map_icon">
+        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_width">30dp</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:src">@mipmap/icon_bus</item>
+    </style>
+
+    <style name="hosipital_nap_text" parent="layout_wrap_wrap">
+        <item name="android:layout_marginLeft">50dp</item>
+        <item name="android:layout_centerVertical">true</item>
+    </style>
+
+    <style name="hosipital_map_go" parent="layout_wrap_wrap">
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:src">@mipmap/ic_go</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="android:layout_centerVertical">true</item>
+    </style>
+
+    <style name="layout_user_title">
+        <item name="android:layout_height">200dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@color/background_pink</item>
+    </style>
+
+    <style name="style_button">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginRight">30dp</item>
     </style>
 </resources>
