--- a/app/src/main/res/layout/fragment_first_home.xml
+++ b/app/src/main/res/layout/fragment_first_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:attrs="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -38,8 +39,8 @@
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="18dp"
-                    attrs:animationDuration="1000"
-                    attrs:animationType="scale"
+                    app:piv_animationDuration="1000"
+                    app:piv_animationType="worm"
                     attrs:viewPager="@id/viewPager" />
 
             </RelativeLayout>
