--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -146,4 +146,22 @@
         <item name="android:layout_marginLeft">30dp</item>
         <item name="android:layout_marginRight">30dp</item>
     </style>
+
+    <style name="text_black_content" parent="layout_wrap_wrap">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="style_edittext">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
+    <style name="style_button_green" parent="style_button">
+        <item name="android:background">@color/background_green</item>
+    </style>
+
+    <style name="style_text_small">
+        <item name="android:textSize">15sp</item>
+    </style>
 </resources>
