--- a/app/src/main/res/layout/fragment_fourth_login.xml
+++ b/app/src/main/res/layout/fragment_fourth_login.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <RelativeLayout style="@style/layout_user_title">
 
-        <ImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/head"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_centerHorizontal="true"
-            android:src="@mipmap/icon_logo" />
+            fresco:placeholderImage="@mipmap/icon_logo" />
 
         <TextView
             style="@style/text_black_title"
@@ -82,13 +83,14 @@
     <Button
         android:id="@+id/login"
         style="@style/style_button"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:background="@color/background_green"
         android:text="@string/login" />
 
     <Button
         android:id="@+id/register"
         style="@style/style_button"
+        android:background="@color/background_white"
         android:layout_marginTop="10dp"
         android:text="@string/register" />
 </LinearLayout>
