--- a/app/src/main/res/layout/item_professor_first.xml
+++ b/app/src/main/res/layout/item_professor_first.xml
@@ -1,48 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/icon_head"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@mipmap/ic_message" />
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/icon_head"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            fresco:placeholderImage="@mipmap/ic_message" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/name"
+                    style="@style/text_black_title"
+                    android:text="李明" />
+
+                <TextView
+                    android:id="@+id/position"
+                    style="@style/text_black_title"
+                    android:layout_marginLeft="15dp"
+                    android:text="主治医师" />
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/name"
-                style="@style/text_black_title"
-                android:text="李明" />
+                android:id="@+id/department"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="皮肤科门诊" />
 
             <TextView
-                android:id="@+id/position"
-                style="@style/text_black_title"
-                android:layout_marginLeft="15dp"
-                android:text="主治医师" />
+                android:id="@+id/skill"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="擅长：糖尿病 糖尿病 糖尿病 糖尿病 糖尿病 糖尿病" />
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/department"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="皮肤科门诊" />
-
-        <TextView
-            android:id="@+id/skill"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:text="擅长：糖尿病 糖尿病 糖尿病 糖尿病 糖尿病 糖尿病" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/background_line_gray" />
 </LinearLayout>
