--- a/app/src/main/res/layout/viewpaper_item.xml
+++ b/app/src/main/res/layout/viewpaper_item.xml
@@ -9,6 +9,22 @@
         android:id="@+id/imageview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        fresco:fadeDuration="300"
+        fresco:actualImageScaleType="focusCrop"
+        fresco:placeholderImageScaleType="fitCenter"
+        fresco:failureImage="@mipmap/icon_logo"
+        fresco:failureImageScaleType="centerInside"
+        fresco:retryImage="@mipmap/icon_bus"
+        fresco:retryImageScaleType="centerCrop"
+        fresco:progressBarImageScaleType="centerInside"
+        fresco:progressBarAutoRotateInterval="1000"
+        fresco:roundAsCircle="false"
+        fresco:roundedCornerRadius="1dp"
+        fresco:roundTopLeft="true"
+        fresco:roundTopRight="false"
+        fresco:roundBottomLeft="false"
+        fresco:roundBottomRight="true"
+        fresco:roundingBorderWidth="2dp"
         android:layout_centerInParent="true"
         fresco:placeholderImage="@mipmap/picture_no" />
 </RelativeLayout>
