--- a/app/src/main/res/layout/fragment_fourth_main.xml
+++ b/app/src/main/res/layout/fragment_fourth_main.xml
@@ -72,10 +72,14 @@
         <ImageView style="@style/setting_go" />
     </RelativeLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:background="@color/background_gray" />
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp">
+        android:layout_height="50dp">
 
         <ImageView
             android:id="@+id/ic_setting_about"
@@ -110,4 +114,9 @@
 
         <ImageView style="@style/setting_go" />
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:background="@color/background_gray" />
 </LinearLayout>
