--- a/app/src/main/res/layout/fragment_second_main.xml
+++ b/app/src/main/res/layout/fragment_second_main.xml
@@ -1,9 +1,204 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="hello,world2"/>
-</LinearLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/white" >
+
+
+    <RelativeLayout
+        android:id="@+id/fraSearch"
+        android:layout_width="fill_parent"
+        android:layout_height="50.0dip"
+        android:background="@color/background_red">
+
+        <RelativeLayout
+            android:id="@+id/relSearch"
+            android:layout_width="fill_parent"
+            android:layout_height="60dp"
+            android:layout_marginBottom="9dp"
+            android:layout_marginLeft="10.0dip"
+            android:layout_marginTop="6dp"
+            android:layout_toLeftOf="@+id/searchImageButton"
+            android:background="@drawable/searchbox"
+            android:gravity="center" >
+
+            <EditText
+                android:id="@+id/seach_keyword"
+                style="@style/style_14_4B4B4B"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="3.0dip"
+                android:background="@null"
+                android:drawablePadding="3.0dip"
+                android:hint="请输入您要搜索的商品"
+                android:imeOptions="actionSearch"
+                android:maxLength="20"
+                android:paddingBottom="1.0dip"
+                android:paddingLeft="20.0dip"
+                android:paddingRight="5.0dip"
+                android:paddingTop="2.0dip"
+                android:singleLine="true" />
+
+            <ImageView
+                android:id="@+id/search_x"
+                android:layout_width="25dp"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="1dp"
+                android:src="@drawable/search_x" />
+        </RelativeLayout>
+
+        <ImageButton
+            android:id="@+id/searchImageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="6.0dip"
+            android:layout_marginRight="10.0dip"
+            android:background="@drawable/red_but"
+            android:paddingBottom="6.0dip"
+            android:paddingLeft="18.0dip"
+            android:paddingRight="18.0dip"
+            android:paddingTop="6.0dip"
+            android:scaleType="center"
+            android:src="@drawable/icon_search" />
+    </RelativeLayout>
+
+    <!-- <RelativeLayout
+        android:id="@+id/fraSearch"
+        android:layout_width="fill_parent"
+        android:layout_height="45.0dip"
+        android:background="@drawable/home_search2" >
+
+        <EditText
+            android:id="@+id/editSearchInfo"
+            style="@style/style_14_4B4B4B"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="35.0dip"
+            android:background="#00ffffff"
+            android:hint="请输入您要搜索的商品"
+            android:maxLength="26"
+            android:singleLine="true" />
+
+        <ImageView
+            android:id="@+id/ok"
+            android:layout_width="40.0dip"
+            android:layout_height="60.0dip"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dip"
+            android:paddingLeft="3.0dip"
+            android:src="@drawable/temp_bg" />
+    </RelativeLayout> -->
+
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/fraSearch"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="200.0dip"
+        android:src="@drawable/search_zoom"
+        android:visibility="gone"
+        />
+
+    <RelativeLayout
+        android:id="@+id/relSpace"
+        android:layout_width="fill_parent"
+        android:layout_height="50.0dip"
+        android:layout_alignParentBottom="true" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@id/relSpace"
+        android:layout_below="@id/fraSearch"
+        android:orientation="vertical" >
+
+        <!-- 活动列表入口（广告） -->
+
+
+        <LinearLayout
+            android:id="@+id/search_lottery_category"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/search_category_hot"
+                android:layout_width="0dip"
+                android:layout_height="35dp"
+                android:layout_weight="1.0"
+                android:background="@drawable/android_horizontal_button_4_selected"
+                android:gravity="center_horizontal|center_vertical"
+
+                android:text="热门搜索"
+                android:textColor="@color/font_gray"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/search_category_history"
+                android:layout_width="0dip"
+                android:layout_height="35dp"
+                android:layout_weight="1.0"
+                android:background="@drawable/android_horizontal_button_4"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="历史搜索"
+                android:textColor="@color/font_gray"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <!-- 下划线 -->
+
+        <ImageView
+            android:id="@+id/search_category_selector"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="matrix"
+            android:src="@drawable/id_category_selector" />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/search_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="260dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="10dp"
+            >
+        </android.support.v4.view.ViewPager>
+
+        <!-- <ListView -->
+        <!-- android:id="@+id/ii_hall_lottery_list" -->
+        <!-- android:layout_width="fill_parent" -->
+        <!-- android:layout_height="fill_parent" -->
+        <!-- android:divider="@null" -->
+        <!-- android:listSelector="@android:color/white" > -->
+        <!-- </ListView> -->
+
+        <TextView
+            android:id="@+id/search_del_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/search_del"
+            android:clickable="true"
+            android:gravity="center"
+            android:onClick="clearKey"
+            android:text="清空历史搜索"
+            android:textColor="@color/font_gray"
+            android:textSize="16sp"
+            android:visibility="gone"
+            />
+
+    </LinearLayout>
+
+</RelativeLayout>
