--- a/app/src/main/res/layout/viewpaper_item.xml
+++ b/app/src/main/res/layout/viewpaper_item.xml
@@ -1,30 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.facebook.drawee.view.SimpleDraweeView
+    <ImageView
         android:id="@+id/imageview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        fresco:fadeDuration="300"
-        fresco:actualImageScaleType="focusCrop"
-        fresco:placeholderImageScaleType="fitCenter"
-        fresco:failureImage="@mipmap/icon_logo"
-        fresco:failureImageScaleType="centerInside"
-        fresco:retryImage="@mipmap/icon_bus"
-        fresco:retryImageScaleType="centerCrop"
-        fresco:progressBarImageScaleType="centerInside"
-        fresco:progressBarAutoRotateInterval="1000"
-        fresco:roundAsCircle="false"
-        fresco:roundedCornerRadius="1dp"
-        fresco:roundTopLeft="true"
-        fresco:roundTopRight="false"
-        fresco:roundBottomLeft="false"
-        fresco:roundBottomRight="true"
-        fresco:roundingBorderWidth="2dp"
-        android:layout_centerInParent="true"
-        fresco:placeholderImage="@mipmap/picture_no" />
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/describe"
+        style="@style/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:text="这是一个大饼" />
 </RelativeLayout>
