添加抢购页面

--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -595,7 +595,7 @@
     <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/bottomBar"
+        android:layout_alignParentBottom="true"
         android:background="@color/white">
 
         <LinearLayout
