--- a/app/src/main/res/layout/fragment_third_main.xml
+++ b/app/src/main/res/layout/fragment_third_main.xml
@@ -1,11 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@color/background_white">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="hello,world3" />
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/category1_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="50.0dip"
+        android:layout_alignParentTop="true"
+        android:background="@color/background_red"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/category1Title"
+            style="@style/style_18_BEBEBE_BOLD"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="分类" />
+    </RelativeLayout>
+
+
+    <ListView
+        android:id="@+id/category1List"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bottomBar"
+        android:layout_below="@id/category1_layout"
+        android:cacheColorHint="#00000000"
+        android:dividerHeight="0.5dp"
+        android:fadingEdge="none"
+        android:listSelector="@drawable/index_item_bg" />
+</RelativeLayout>
